no se puede usar rest, hay que usar soap contra jira